# cloudpaste

./: .gitignore  README.en.md  README.md  README.zh.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  x64.yaml
.github/workflows/: build.yml
backend/: .env.example  .gitignore  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  database.py  logger.py  security.py  websocket.py
backend/app/models/: db_models.py  schemas.py
backend/scripts/: create_admin.py  start.sh
desktop/: .gitignore  CLIPBOARD_SYNC_INTEGRATION.md  config.example.json  package.json  tsconfig.tsbuildinfo
desktop/app/: globals.css  layout.tsx  page.tsx
desktop/app/dashboard/: layout.tsx  page.tsx
desktop/app/login/: page.tsx
desktop/app/register/: page.tsx
desktop/components/: MediaPreviewModal.tsx
desktop/lib/: device.ts  tauriFileUtils.ts  updateManager.ts
desktop/lib/hooks/: README.md  useClipboard.ts  useFileCache.ts  useMediaCache.ts  useTauriConfig.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: image_cache.rs  lib.rs  main.rs
desktop/src-tauri/zh-Hans.lproj/: InfoPlist.strings
docker/: Dockerfile  docker-compose.yml  start.sh
docker/config/: cloudpaste-maps.conf  cloudpaste.conf  supervisord.conf
docker/scripts/: entrypoint.sh
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: update-version.mjs
(+16 files in other folders)
